Criação dos testes da camada de domínio